fixes the alignment of the price and date #650

--- a/web/static/css/app.css
+++ b/web/static/css/app.css
@@ -108,6 +108,10 @@ opacity: 0;
   cursor: pointer;
 }
 
+.k-pt2-8 {
+  padding-top: 2.8rem;
+}
+
 @media screen and (min-width: 30em) and (max-width: 60em){
   .app-container {
     padding-left: 3rem;
@@ -118,6 +122,9 @@ opacity: 0;
 @media screen and (min-width: 30em) {
   .app-container {
     max-width: 110rem;
+  }
+  .k-pt2-8 {
+    padding-top: 2.5rem;
   }
 }
 
@@ -148,6 +155,7 @@ opacity: 0;
 .k-pr4-5 {
   padding-right: 3rem;
 }
+
 /*Nav hamburger animation*/
 
 /*mobile*/
@@ -454,6 +462,8 @@ select {
 .k-pl4-5 {
   padding-left: 3rem;
 }
+
+
 
 .k-top-2-5 {
   top: 2.5rem;
